--- a/example/index.html
+++ b/example/index.html
@@ -7,12 +7,26 @@
 	<script src="../lib/vendor/lodash.min.js"></script>
 </head>
 <body>
+	<div>
+		<h3>Machine Learning in Javascript</h3>
+		<h4>Library</h4>
+		<ul>
+			<li>lib/stoch_grad_desc.js: Javascript implementation of stachastic gradient descent algorithm</li>
+			<li>lib/feature_normalize.js: a collection of functions to normalize/denormalize data before/after feeding to gradient descent algorithm</li>
+		</ul>
+
+		<h4>Example</h4>
+		The example folder contains an example with two data samples.
+
+		<h4>Usage</h4>
+		Comprehensive tutorial to follow. Please contact me if you have any questions/suggestions.
+	</div>
 	<script src="../lib/feature_normalize.js"></script>
 	<script src="../lib/stoch_grad_desc.js"></script>
 	<script src="js/main.js"></script>
 
 	<script type="text/javascript">
-	
+
 		$(document).ready(function() {
 			$.ajax({
 			    type: "GET",
